# insta_gen

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
insta_gen/: __init__.py  __main__.py  config.py  images.py  overlay.py  pipeline.py  prompt.py  quran.py
tests/: test_overlay.py  test_pipeline.py  test_prompt.py
