[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "insta_gen"
version = "1.0.0"
description = "Generate shareable images pairing an AI-generated background with a random Qur'an verse."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "pillow>=9.4",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
insta-gen = "insta_gen.__main__:main"

[tool.setuptools.packages.find]
include = ["insta_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
